reduce noisy logs